--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body{
     padding-top: 100px;
 }
 
+/* #profile{
+    margin-top: 120px;
+} */
+
 html{
     scroll-behavior: smooth;
 }
@@ -22,65 +26,44 @@ header{
     top: 0;
 }
 
-.nav-bar{
+.navbar{
     display: flex;
-    justify-content: space-around;
-}
-
-.nav-bar div{
+    justify-content: space-between;
+    padding: 0px 80px;
     height: 100px;
-    width: 40%;
 }
 
 .logo{
-    height: 70px;
-    width: 100px;
-    margin-top: 10px;
+    position: relative;
+    height: 70%;
+    width: 9%;
+    margin-top: 1.6%;
     padding: 5px 0px;
 }
 
-.right-head ul{
+.navbar ul{
+    position: relative;
     list-style: none;
     display: flex;
     justify-content: space-between;
-    margin-top: 45px;
+    margin-top: 3.7%;
 }
 
-.right-head ul li{
-    padding: 0 10px;
+.navbar ul li{
+    padding: 0 0 0 90px;
 }
 
-.right-head ul li a{
+.navbar ul li a{
     text-decoration: none;
-    color: yellow;
-    font-size: 23px;
+    color: white;
+    font-size: 4.5vh;
     text-transform: uppercase;
     transition: all 0.5s;
 }
 
-/* .right-head ul li a:hover,
-.right-head ul li .active{
+.navbar ul li a:active{
     color: yellow;
-} */
-
-/* .right-head .hov{
-    color: white;
-    background-color: grey;
-    border: 1px solid white;
-    height: 20px;
-    width: auto;
-    padding: 4px;
-    margin-right: 90px;
-    display: none;
-} */
-
-/* .right-head a:hover + .about .hov{
-    display: block;
-} */
-
-/* .right-head .about{
-    display: flex;
-} */
+}
 
 
 /* main */
