--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header{
     top: 0;
 }
 
-.navbar{
+nav{
     display: flex;
     justify-content: space-between;
     padding: 0px 80px;
@@ -41,7 +41,7 @@ header{
     padding: 5px 0px;
 }
 
-.navbar ul{
+nav ul{
     position: relative;
     list-style: none;
     display: flex;
@@ -49,11 +49,11 @@ header{
     margin-top: 3.7%;
 }
 
-.navbar ul li{
+nav ul li{
     padding: 0 0 0 90px;
 }
 
-.navbar ul li a{
+nav ul li a{
     text-decoration: none;
     color: white;
     font-size: 4.5vh;
@@ -61,7 +61,7 @@ header{
     transition: all 0.5s;
 }
 
-.navbar ul li a:active{
+nav ul li a.active{
     color: yellow;
 }
 
