--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     background-color: #182230;
 }
 
+.hide{
+    display: none;
+}
+
 /* body{
     padding-top: 100px;
 } */
@@ -32,6 +36,98 @@ nav{
     padding: 0px 80px;
     height: 100px;
 }
+
+.popup {
+    position: fixed;
+    background: white;
+    height: 120px;
+    width: 200px;
+    bottom: 30px;
+    right: 30px;
+    z-index: 1000;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.popup .close-btn {
+    background-color: transparent;
+    border: none;
+    font-size: 24px;
+    font-weight: bold;
+    cursor: pointer;
+    color: #333; /* Change this to match your color scheme */
+    outline: none;
+    position: absolute;
+    top: 10px;
+    right: 5px;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* border-radius: 50%; */
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.popup .close-btn:hover {
+    background-color: #f1f1f1; /* Light grey on hover */
+}
+
+.popup .loader-line {
+    position: relative;
+    display: block;
+    padding: 2px;
+    font-size: 2px;
+    line-height: 2px;
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.25), 0 1px rgba(255, 255, 255, 0.08);
+}
+
+.popup .loader-line span {
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+    height: 5px;
+    border-radius: 10px 0 0 10px;
+    overflow: hidden;
+    background-size: 100%;
+    background: linear-gradient(to right,#000001, #061e88);
+    animation: progress-anim-1 3s ease-in-out;
+}
+
+@keyframes progress-anim-1 {
+    0% {
+        width: 100%;
+    }
+    100% {
+        width: 0%;
+    }
+}
+
+/* .loader-line span:after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    content: "";
+    background-size: 100%;
+    background: blue;
+    background-size: 30px 30px;
+    opacity: 0.3;
+    animation: ;
+} */
+
+/* @-webkit-keyframes progress-anim-1 {
+    0% {
+      width: 100%;
+    }
+    100% {
+      width: 0%;
+    }
+} 
+  */
 
 .logo{
     position: relative;
@@ -64,7 +160,6 @@ nav ul li a{
 nav ul li a.active{
     color: yellow;
 }
-
 
 /* main */
 
